# liminity

./: README.md  pyproject.toml
src/liminity/: __init__.py  example.cfg  liminity.py
