[project]
name = "liminity"
version = "0.1.0"
description = "AI todo list demo for luciditycli's features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "luciditycli>=0.1.3"
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
liminity = "liminity.liminity:main"

[tool.setuptools.packages.find]
where = ["src"]

